--- a/index.Rmd
+++ b/index.Rmd
@@ -9,7 +9,16 @@ output:
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+library{tidyverse}
+library{plotly}
+library{spotifyr}
+library{compmus}
+
 ```
+### This is a headline test
+
+***
+This is text 
 
 ## R Markdown
 
