--- a/index.Rmd
+++ b/index.Rmd
@@ -53,3 +53,36 @@ scatter_plot
 
 ***
 deze plot is 
+
+
+
+### Chromatogram test
+
+```{r}
+
+Categorical <-
+  get_tidy_audio_analysis("6qi0vMwfN9qRh8wzrOyvp7") |>
+  select(segments) |>
+  unnest(segments) |>
+  select(start, duration, pitches)
+
+
+Categorical |>
+  mutate(pitches = map(pitches, compmus_normalise, "manhattan")) |>
+  compmus_gather_chroma() |> 
+  ggplot(
+    aes(
+      x = start + duration / 2,
+      width = duration,
+      y = pitch_class,
+      fill = value
+    )
+  ) +
+  geom_tile() +
+  labs(x = "Time (s)", y = NULL, fill = "Magnitude") +
+  theme_minimal() +
+  scale_fill_viridis_c()
+```
+
+*** 
+Does this work?
