--- a/index.Rmd
+++ b/index.Rmd
@@ -147,7 +147,7 @@ Does this work?
 ### Ceptrogram
 ```{r}
 phf <-
-  get_tidy_audio_analysis("1KcOU0q9AMXV9xi4tSzzCc") |> # Change URI.
+  get_tidy_audio_analysis("6qZjm61s6u8Ead9sWxCDro") |> # Change URI.
   compmus_align(beats, segments) |>                     # Change `bars`
   select(beats) |>                                      #   in all three
   unnest(beats) |>                                      #   of these lines.
@@ -180,6 +180,48 @@ phf |>
   labs(x = "Time (s)", y = NULL, fill = "Magnitude") +
   scale_fill_viridis_c() +                              
   theme_classic()
+```
+
+
+### Ceptogram 2
+
+```{r}
+elephant <-
+  get_tidy_audio_analysis("1KcOU0q9AMXV9xi4tSzzCc") |> # Change URI.
+  compmus_align(bars, segments) |>                     # Change `bars`
+  select(bars) |>                                      #   in all three
+  unnest(bars) |>                                      #   of these lines.
+  mutate(
+    pitches =
+      map(segments,
+          compmus_summarise, pitches,
+          method = "rms", norm = "euclidean"              # Change summary & norm.
+      )
+  ) |>
+  mutate(
+    timbre =
+      map(segments,
+          compmus_summarise, timbre,
+          method = "rms", norm = "euclidean"              # Change summary & norm.
+      )
+  )
+
+elephant |>
+  compmus_self_similarity(timbre, "cosine") |> 
+  ggplot(
+    aes(
+      x = xstart + xduration / 2,
+      width = xduration,
+      y = ystart + yduration / 2,
+      height = yduration,
+      fill = d
+    )
+  ) +
+  geom_tile() +
+  coord_fixed() +
+  scale_fill_viridis_c(guide = "none") +
+  theme_classic() +
+  labs(x = "", y = "")
 ```
 
 ### Conclusion
