--- a/index.Rmd
+++ b/index.Rmd
@@ -5,6 +5,9 @@ date: "2023-02-21"
 output: 
   flexdashboard::flex_dashboard:
     storyboard: true
+    theme:
+      version: 4
+      bootswatch: minty
 ---
 
 ```{r, echo=FALSE}
@@ -13,12 +16,177 @@ library(tidyverse)
 library(plotly)
 library(spotifyr)
 library(compmus)
-
 ```
-### Introduction
 
+### Track level summary
+
+```{r}
+Before_Currents <-
+  get_playlist_audio_features(
+  "", "0zj7vBkFkrtkIy7bbiIDHT"
+  ) |>
+  slice(1:30) |>
+  add_audio_analysis()
+
+After_Currents <-
+  get_playlist_audio_features(
+  "", "2iF5St3YBr1AalBJFZK8uD"
+  ) |>
+  slice(1:30) |>
+  add_audio_analysis()
+
+Tame_Impala <-
+  Before_Currents |>
+  mutate(genre = "Before currents") |>
+  bind_rows(After_Currents |> mutate(genre = "After currents"))
+
+Tame_Impala |>
+  mutate(
+    timbre =
+      map(
+        segments,
+        compmus_summarise,
+        timbre,
+        method = "mean"
+      )
+  ) |>
+  select(genre, timbre) |>
+  compmus_gather_timbre() |>
+  ggplot(aes(x = basis, y = value, fill = genre)) +
+  geom_violin() +
+  scale_fill_viridis_d() +
+  labs(x = "Spotify Timbre Coefficients", y = "", fill = "Genre")
+
+``` 
 ***
-This is text 
+In this visualization, you can see a comparison between the two groups within my chosen corpus: However, there is less variation than I expected beforehand in terms of timbre values. However, the second value (which says something about the "strength" of the high frequencies is significantly different. I am going to delve further into what exactly this difference means and whether I can recognize it myself. 
+
+### Chordogram 
+```{r}
+circshift <- function(v, n) {
+  if (n == 0) v else c(tail(v, n), head(v, -n))
+}
+
+#      C     C#    D     Eb    E     F     F#    G     Ab    A     Bb    B
+major_chord <-
+  c(   1,    0,    0,    0,    1,    0,    0,    1,    0,    0,    0,    0)
+minor_chord <-
+  c(   1,    0,    0,    1,    0,    0,    0,    1,    0,    0,    0,    0)
+seventh_chord <-
+  c(   1,    0,    0,    0,    1,    0,    0,    1,    0,    0,    1,    0)
+
+major_key <-
+  c(6.35, 2.23, 3.48, 2.33, 4.38, 4.09, 2.52, 5.19, 2.39, 3.66, 2.29, 2.88)
+minor_key <-
+  c(6.33, 2.68, 3.52, 5.38, 2.60, 3.53, 2.54, 4.75, 3.98, 2.69, 3.34, 3.17)
+
+chord_templates <-
+  tribble(
+    ~name, ~template,
+    "Gb:7", circshift(seventh_chord, 6),
+    "Gb:maj", circshift(major_chord, 6),
+    "Bb:min", circshift(minor_chord, 10),
+    "Db:maj", circshift(major_chord, 1),
+    "F:min", circshift(minor_chord, 5),
+    "Ab:7", circshift(seventh_chord, 8),
+    "Ab:maj", circshift(major_chord, 8),
+    "C:min", circshift(minor_chord, 0),
+    "Eb:7", circshift(seventh_chord, 3),
+    "Eb:maj", circshift(major_chord, 3),
+    "G:min", circshift(minor_chord, 7),
+    "Bb:7", circshift(seventh_chord, 10),
+    "Bb:maj", circshift(major_chord, 10),
+    "D:min", circshift(minor_chord, 2),
+    "F:7", circshift(seventh_chord, 5),
+    "F:maj", circshift(major_chord, 5),
+    "A:min", circshift(minor_chord, 9),
+    "C:7", circshift(seventh_chord, 0),
+    "C:maj", circshift(major_chord, 0),
+    "E:min", circshift(minor_chord, 4),
+    "G:7", circshift(seventh_chord, 7),
+    "G:maj", circshift(major_chord, 7),
+    "B:min", circshift(minor_chord, 11),
+    "D:7", circshift(seventh_chord, 2),
+    "D:maj", circshift(major_chord, 2),
+    "F#:min", circshift(minor_chord, 6),
+    "A:7", circshift(seventh_chord, 9),
+    "A:maj", circshift(major_chord, 9),
+    "C#:min", circshift(minor_chord, 1),
+    "E:7", circshift(seventh_chord, 4),
+    "E:maj", circshift(major_chord, 4),
+    "G#:min", circshift(minor_chord, 8),
+    "B:7", circshift(seventh_chord, 11),
+    "B:maj", circshift(major_chord, 11),
+    "D#:min", circshift(minor_chord, 3)
+  )
+
+key_templates <-
+  tribble(
+    ~name, ~template,
+    "Gb:maj", circshift(major_key, 6),
+    "Bb:min", circshift(minor_key, 10),
+    "Db:maj", circshift(major_key, 1),
+    "F:min", circshift(minor_key, 5),
+    "Ab:maj", circshift(major_key, 8),
+    "C:min", circshift(minor_key, 0),
+    "Eb:maj", circshift(major_key, 3),
+    "G:min", circshift(minor_key, 7),
+    "Bb:maj", circshift(major_key, 10),
+    "D:min", circshift(minor_key, 2),
+    "F:maj", circshift(major_key, 5),
+    "A:min", circshift(minor_key, 9),
+    "C:maj", circshift(major_key, 0),
+    "E:min", circshift(minor_key, 4),
+    "G:maj", circshift(major_key, 7),
+    "B:min", circshift(minor_key, 11),
+    "D:maj", circshift(major_key, 2),
+    "F#:min", circshift(minor_key, 6),
+    "A:maj", circshift(major_key, 9),
+    "C#:min", circshift(minor_key, 1),
+    "E:maj", circshift(major_key, 4),
+    "G#:min", circshift(minor_key, 8),
+    "B:maj", circshift(major_key, 11),
+    "D#:min", circshift(minor_key, 3)
+  )
+
+phf <-
+  get_tidy_audio_analysis("1KcOU0q9AMXV9xi4tSzzCc") |>
+  compmus_align(sections, segments) |>
+  select(sections) |>
+  unnest(sections) |>
+  mutate(
+    pitches =
+      map(segments,
+          compmus_summarise, pitches,
+          method = "mean", norm = "manhattan"
+      )
+  )
+
+phf |> 
+  compmus_match_pitch_template(
+    chord_templates,         # Change to chord_templates if desired
+    method = "manhattan",  # Try different distance metrics
+    norm = "manhattan"     # Try different norms
+  ) |>
+  ggplot(
+    aes(x = start + duration / 2, width = duration, y = name, fill = d)
+  ) +
+  geom_tile() +
+  scale_fill_viridis_c(guide = "none") +
+  theme_minimal() +
+  labs(x = "Time (s)", y = "")
+```
+
+
+### Does the genre of a major music phenomenon like Tame Impala change due to popularity?
+
+Tame Impala is a famous musical project led by Kevin Parker, mostly known for its psychedelic rock. With the 2015 album Currents, it made its breakthrough to the greater public and has continued to grow in listeners over the past few years. Interestingly, best-known songs from the exploded album are quite "mild" by psychedelic-rock standards. Since this somewhat softer version of the genre seems to be doing well, I am curious to what extent a music phenomenon like Tame Impala, in genre 'adapts' after success, relative to their earlier songs. Do they make what the general public wants to hear, or do they maintain their authentic style for a smaller group of psychedelic-rock fanatics?
+
+The groups I want to compare within this corpus will be, first, the first singles from 2008 and 2009, the first album Innerspeaker from 2010 and Lonerism from 2013. To the second group I want to name all the songs after Currents (2015). The album on which they broke through (Currents) I want to assess herein separately by genre.
+
+The expectations I have at this moment are therefore that their earlier songs can be considered as harder, rougher, up-tempo and less "accessible" psychedelic rock, while the songs from Currents and thus everything that followed fit better within the genres alternative/indie and (synth)pop.
+
+Songs that, in my opinion, typify both extremes in this are The Bold Arrow of Time from the album Innerspeaker (2010) as typical hard psychedelic rock versus The less I know the better from Currents (2015). Songs like Nangs and Gossip from that same album might be a bit off, as they could be better considered as ambient music and are hard to categorize in any of the aforementioned genres.
 
 ### A first visualisation
 
@@ -29,10 +197,9 @@ After_Currents <- get_playlist_audio_features("", "2iF5St3YBr1AalBJFZK8uD")
 Categorical <- rbind(Before_Currents, After_Currents)
 
 Categorical |>
-  ggplot(aes(x = playlist_name, y = danceability )) +
+  ggplot(aes(x = playlist_name, y = danceability, box = FALSE )) +
   geom_violin() + theme_minimal() +
   theme(
-    text = element_text( color = "white"),
     plot.subtitle = element_text(size = 12, color = "white"),
     plot.background = element_rect(fill = "lightblue"),
     plot.margin = unit(c(5, 10, 5, 10), units = "mm")
@@ -53,9 +220,9 @@ scatter_plot <- ggplot(Categorical, aes(x = valence, y = energy, size = tempo, c
     y = "Energy"
   ) + theme_minimal() +
   theme(
-    text = element_text( color = "white"),
-    plot.subtitle = element_text(size = 12, color = "white"),
-    plot.background = element_rect(fill = "lightblue"),
+    text = element_text( color = "black"),
+    plot.subtitle = element_text(size = 12, color = "black"),
+    #plot.background = element_rect(fill = "lightblue"),
     plot.margin = unit(c(5, 10, 5, 10), units = "mm")
   ) 
 
@@ -146,7 +313,7 @@ Does this work?
 
 ### Ceptrogram
 ```{r}
-phf <-
+elephant <-
   get_tidy_audio_analysis("6qZjm61s6u8Ead9sWxCDro") |> # Change URI.
   compmus_align(beats, segments) |>                     # Change `bars`
   select(beats) |>                                      #   in all three
@@ -166,7 +333,7 @@ phf <-
       )
   )
 
-phf |>
+elephant |>
   compmus_gather_timbre() |>
   ggplot(
     aes(
@@ -183,10 +350,10 @@ phf |>
 ```
 
 
-### Ceptogram 2
+### Self similarity matrix: ceptogram
 
 ```{r}
-elephant <-
+phf <-
   get_tidy_audio_analysis("1KcOU0q9AMXV9xi4tSzzCc") |> # Change URI.
   compmus_align(bars, segments) |>                     # Change `bars`
   select(bars) |>                                      #   in all three
@@ -224,7 +391,133 @@ elephant |>
   labs(x = "", y = "")
 ```
 
+
+### Chordogram 
+```{r}
+circshift <- function(v, n) {
+  if (n == 0) v else c(tail(v, n), head(v, -n))
+}
+
+#      C     C#    D     Eb    E     F     F#    G     Ab    A     Bb    B
+major_chord <-
+  c(   1,    0,    0,    0,    1,    0,    0,    1,    0,    0,    0,    0)
+minor_chord <-
+  c(   1,    0,    0,    1,    0,    0,    0,    1,    0,    0,    0,    0)
+seventh_chord <-
+  c(   1,    0,    0,    0,    1,    0,    0,    1,    0,    0,    1,    0)
+
+major_key <-
+  c(6.35, 2.23, 3.48, 2.33, 4.38, 4.09, 2.52, 5.19, 2.39, 3.66, 2.29, 2.88)
+minor_key <-
+  c(6.33, 2.68, 3.52, 5.38, 2.60, 3.53, 2.54, 4.75, 3.98, 2.69, 3.34, 3.17)
+
+chord_templates <-
+  tribble(
+    ~name, ~template,
+    "Gb:7", circshift(seventh_chord, 6),
+    "Gb:maj", circshift(major_chord, 6),
+    "Bb:min", circshift(minor_chord, 10),
+    "Db:maj", circshift(major_chord, 1),
+    "F:min", circshift(minor_chord, 5),
+    "Ab:7", circshift(seventh_chord, 8),
+    "Ab:maj", circshift(major_chord, 8),
+    "C:min", circshift(minor_chord, 0),
+    "Eb:7", circshift(seventh_chord, 3),
+    "Eb:maj", circshift(major_chord, 3),
+    "G:min", circshift(minor_chord, 7),
+    "Bb:7", circshift(seventh_chord, 10),
+    "Bb:maj", circshift(major_chord, 10),
+    "D:min", circshift(minor_chord, 2),
+    "F:7", circshift(seventh_chord, 5),
+    "F:maj", circshift(major_chord, 5),
+    "A:min", circshift(minor_chord, 9),
+    "C:7", circshift(seventh_chord, 0),
+    "C:maj", circshift(major_chord, 0),
+    "E:min", circshift(minor_chord, 4),
+    "G:7", circshift(seventh_chord, 7),
+    "G:maj", circshift(major_chord, 7),
+    "B:min", circshift(minor_chord, 11),
+    "D:7", circshift(seventh_chord, 2),
+    "D:maj", circshift(major_chord, 2),
+    "F#:min", circshift(minor_chord, 6),
+    "A:7", circshift(seventh_chord, 9),
+    "A:maj", circshift(major_chord, 9),
+    "C#:min", circshift(minor_chord, 1),
+    "E:7", circshift(seventh_chord, 4),
+    "E:maj", circshift(major_chord, 4),
+    "G#:min", circshift(minor_chord, 8),
+    "B:7", circshift(seventh_chord, 11),
+    "B:maj", circshift(major_chord, 11),
+    "D#:min", circshift(minor_chord, 3)
+  )
+
+key_templates <-
+  tribble(
+    ~name, ~template,
+    "Gb:maj", circshift(major_key, 6),
+    "Bb:min", circshift(minor_key, 10),
+    "Db:maj", circshift(major_key, 1),
+    "F:min", circshift(minor_key, 5),
+    "Ab:maj", circshift(major_key, 8),
+    "C:min", circshift(minor_key, 0),
+    "Eb:maj", circshift(major_key, 3),
+    "G:min", circshift(minor_key, 7),
+    "Bb:maj", circshift(major_key, 10),
+    "D:min", circshift(minor_key, 2),
+    "F:maj", circshift(major_key, 5),
+    "A:min", circshift(minor_key, 9),
+    "C:maj", circshift(major_key, 0),
+    "E:min", circshift(minor_key, 4),
+    "G:maj", circshift(major_key, 7),
+    "B:min", circshift(minor_key, 11),
+    "D:maj", circshift(major_key, 2),
+    "F#:min", circshift(minor_key, 6),
+    "A:maj", circshift(major_key, 9),
+    "C#:min", circshift(minor_key, 1),
+    "E:maj", circshift(major_key, 4),
+    "G#:min", circshift(minor_key, 8),
+    "B:maj", circshift(major_key, 11),
+    "D#:min", circshift(minor_key, 3)
+  )
+
+phf <-
+  get_tidy_audio_analysis("1KcOU0q9AMXV9xi4tSzzCc") |>
+  compmus_align(sections, segments) |>
+  select(sections) |>
+  unnest(sections) |>
+  mutate(
+    pitches =
+      map(segments,
+          compmus_summarise, pitches,
+          method = "mean", norm = "manhattan"
+      )
+  )
+
+phf |> 
+  compmus_match_pitch_template(
+    chord_templates,         # Change to chord_templates if desired
+    method = "manhattan",  # Try different distance metrics
+    norm = "manhattan"     # Try different norms
+  ) |>
+  ggplot(
+    aes(x = start + duration / 2, width = duration, y = name, fill = d)
+  ) +
+  geom_tile() +
+  scale_fill_viridis_c(guide = "none") +
+  theme_minimal() +
+  labs(x = "Time (s)", y = "")
+
+```
+
+
+
 ### Conclusion
 
 ***
 Here I would write my overall conclusions so far
+
+
+
+
+
+
